--- a/src/index.scss
+++ b/src/index.scss
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 5000px;
 }
 
 code {
@@ -20,3 +21,7 @@ code {
 
 // variable
 @import './styles/variable';
+
+// components
+@import './App';
+@import './components/Bgm';
