--- a/src/index.scss
+++ b/src/index.scss
@@ -1,23 +1,8 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  height: 5000px;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
 // reset
 @import './styles/reset';
 
 // global
-@import './styles/variable';
+@import './styles/global';
 
 // variable
 @import './styles/variable';
@@ -25,3 +10,5 @@ code {
 // components
 @import './App';
 @import './components/Bgm';
+@import './components/common/StateMessage';
+@import './components/Header';
