--- a/src/index.scss
+++ b/src/index.scss
@@ -12,3 +12,6 @@
 @import './components/Bgm';
 @import './components/common/StateMessage';
 @import './components/Header';
+
+// sections
+@import './components/sections/Hero';
