--- a/src/components/_Header.scss
+++ b/src/components/_Header.scss
@@ -5,13 +5,15 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 200px 20px 50px 20px;
   }
 
   &__date-box,
   &__name-box {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
   }
 
   &__date {
@@ -26,6 +28,15 @@
   &__bride-name {
     font-size: 55px;
     letter-spacing: 10px;
+  }
+
+  &__name-title {
+    color: pink;
+    margin-bottom: 5px;
+  }
+
+  .bride {
+    margin-top: 30px;
   }
 
   &__icon {
