feat: Wave 컴포넌트

--- a/src/index.scss
+++ b/src/index.scss
@@ -12,6 +12,7 @@
 @import './components/Bgm';
 @import './components/common/StateMessage';
 @import './components/Header';
+@import './components/Wave';
 
 // sections
 @import './components/sections/Hero';
