--- a/src/components/sections/_Info.scss
+++ b/src/components/sections/_Info.scss
@@ -1,3 +1,45 @@
 .info {
   background-color: #fff;
+
+  &__inner {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+
+  &__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+  }
+
+  &__name {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 15px;
+
+    span {
+      letter-spacing: 2px;
+    }
+  }
+
+  &__icon {
+    fill: #FF7979;
+    width: 50px;
+    height: 50px;
+  }
+
+
+  &__date {
+    font-size: 24px;
+    line-height: 1.2;
+  }
+
+  &__location {
+    font-size: 18px;
+    line-height: 1.2;
+    margin-top: 8px;
+  }
 }
