--- a/src/_App.scss
+++ b/src/_App.scss
@@ -1,7 +1,7 @@
 .App {
   position: relative;
   max-width: 1024px;
-  background-color: red;
+  background-color: #fff;
   margin: 0 auto;
   height: fit-content;
 }
