--- a/src/index.scss
+++ b/src/index.scss
@@ -18,3 +18,4 @@
 @import './components/sections/Hero';
 @import './components/sections/Info';
 @import './components/sections/Invitation';
+@import './components/sections/Calendar';
