feat: ImageGallery 컴포넌트

--- a/src/index.scss
+++ b/src/index.scss
@@ -13,9 +13,11 @@
 @import './components/common/StateMessage';
 @import './components/Header';
 @import './components/Wave';
+@import './components/ImageViewer';
 
 // sections
 @import './components/sections/Hero';
 @import './components/sections/Info';
 @import './components/sections/Invitation';
 @import './components/sections/Calendar';
+@import './components/sections/ImageGallery';
