--- a/src/components/sections/_ImageGallery.scss
+++ b/src/components/sections/_ImageGallery.scss
@@ -1,10 +1,32 @@
 .gallery {
     &__inner {
-        margin: 0 auto;
+        margin: 100px auto 0;
+        position: relative;
+    }
+
+    &__title {
+        text-align: center;
+        margin-bottom: 50px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 8px;
+
+        &-main {
+            font-size: 40px;
+            font-weight: bold;
+            letter-spacing: 2px;
+        }
+
+        &-sub {
+            font-size: 24px;
+        }
     }
 
     &__album {
         height: 2000px;
+        // height: max-content;
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         gap: 10px;
@@ -14,6 +36,19 @@
             grid-area: span 2;
         }
     }
+
+    &__container {
+        max-height: 900px;
+        overflow: hidden;
+        transition: max-height 0.5s ease-in-out;
+    }
+
+    &__container.show {
+        overflow: none;
+        max-height: 3000px;
+    }
+
+
 
     &__item {
         border: none;
@@ -27,6 +62,33 @@
             height: 100%;
             object-fit: cover;
             object-position: center;
+        }
+    }
+
+    &__more {
+        width: 100%;
+        position: absolute;
+    }
+
+    &__btn {
+        width: 100%;
+        height: 50px;
+        border: none;
+        outline: none;
+        border-radius: 10px;
+        position: relative;
+    }
+
+    &__btn.show {
+        &::before {
+            content: "";
+            width: 100%;
+            height: 80px;
+            position: absolute;
+            right: 0;
+            left: 0;
+            bottom: 100%;
+            background: linear-gradient(0deg, rgba(250, 250, 250, 1) 0%, rgba(250, 250, 250, 0.55) 60%, rgba(250, 250, 250, 0.5) 73%, rgba(250, 250, 250, 0.25) 83%, rgba(250, 250, 250, 0) 100%);
         }
     }
 }
