feat: Location 컴포넌트

--- a/src/index.scss
+++ b/src/index.scss
@@ -21,3 +21,4 @@
 @import './components/sections/Invitation';
 @import './components/sections/Calendar';
 @import './components/sections/ImageGallery';
+@import './components/sections/Location';
