feat: Navigation 컴포넌트

--- a/src/index.scss
+++ b/src/index.scss
@@ -22,3 +22,4 @@
 @import './components/sections/Calendar';
 @import './components/sections/ImageGallery';
 @import './components/sections/Location';
+@import './components/sections/Navigation';
