--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -87,6 +87,7 @@ video {
   vertical-align: baseline;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  text-decoration: none;
 }
 /* HTML5 display-role reset for older browsers */
 article,
