feat: WayToCome 컴포넌트

--- a/src/index.scss
+++ b/src/index.scss
@@ -14,6 +14,7 @@
 @import './components/Header';
 @import './components/Wave';
 @import './components/ImageViewer';
+@import './components/Vehicle';
 
 // sections
 @import './components/sections/Hero';
@@ -23,3 +24,4 @@
 @import './components/sections/ImageGallery';
 @import './components/sections/Location';
 @import './components/sections/Navigation';
+@import './components/sections/WayToCome';
