feat: Account 컴포넌트

--- a/src/index.scss
+++ b/src/index.scss
@@ -27,3 +27,4 @@
 @import './components/sections/Navigation';
 @import './components/sections/WayToCome';
 @import './components/sections/GuestBook';
+@import './components/sections/Account';
