feat: Accordion 컴포넌트

--- a/src/index.scss
+++ b/src/index.scss
@@ -16,6 +16,7 @@
 @import './components/ImageViewer';
 @import './components/Vehicle';
 @import './components/CommentForm';
+@import './components/common/Accordion';
 
 // sections
 @import './components/sections/Hero';
