feat: 카카오톡 공유하기

--- a/src/index.scss
+++ b/src/index.scss
@@ -17,6 +17,7 @@
 @import './components/Vehicle';
 @import './components/CommentForm';
 @import './components/common/Accordion';
+@import './components/Footer';
 
 // sections
 @import './components/sections/Hero';
