--- a/src/_App.scss
+++ b/src/_App.scss
@@ -1,7 +1,9 @@
 .App {
   position: relative;
-  max-width: 1024px;
-  background-color: #fff;
+  max-width: 800px;
+  box-sizing: border-box;
   margin: 0 auto;
-  height: fit-content;
+  height: 100%;
+  padding: 0 20px;
+  box-sizing: content-box;
 }
