--- a/src/components/_Header.scss
+++ b/src/components/_Header.scss
@@ -3,25 +3,28 @@
 
   &__inner {
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: space-between;
-    padding: 200px 20px 50px 20px;
+    justify-content: center;
+    gap: 20px;
+    padding: 100px 20px 50px;
   }
 
   &__date-box,
   &__name-box {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     justify-content: center;
+    gap: 3px;
   }
 
   &__date {
-    font-size: 36px;
+    font-size: 50px;
   }
 
   &__day {
-    font-size: 24px;
+    font-size: 36px;
   }
 
   &__groom-name,
@@ -32,7 +35,9 @@
 
   &__name-title {
     color: pink;
-    margin-bottom: 5px;
+    font-size: 20px;
+    font-weight: bold;
+    letter-spacing: 5px;
   }
 
   .bride {
