--- a/src/components/_Vehicle.scss
+++ b/src/components/_Vehicle.scss
@@ -13,11 +13,20 @@
         gap: 5px;
         font-size: 20px;
         font-weight: bold;
+
+        span {
+            font-size: 20px;
+        }
     }
 
     &__icon {
         width: 32px;
         height: 32px;
+    }
+
+    &__icon.car {
+        width: 25px;
+        height: 25px;
     }
 
     &__item {
@@ -42,5 +51,7 @@
         gap: 5px;
         align-items: flex-start;
         justify-content: center;
+        padding: 0 20px;
+        margin-bottom: 20px;
     }
 }
