--- a/src/components/sections/_Info.scss
+++ b/src/components/sections/_Info.scss
@@ -21,6 +21,7 @@
     gap: 15px;
 
     span {
+      font-size: 30px;
       letter-spacing: 2px;
     }
   }
@@ -29,17 +30,35 @@
     fill: #FF7979;
     width: 50px;
     height: 50px;
+    animation: heartbeat 1.4s linear infinite;
   }
 
 
   &__date {
     font-size: 24px;
     line-height: 1.2;
+
+    span {
+      font-size: 32px;
+    }
   }
 
   &__location {
     font-size: 18px;
     line-height: 1.2;
     margin-top: 8px;
+
+    span {
+      font-size: 28px;
+    }
   }
+}
+
+@keyframes heartbeat {
+  0% { transform: scale(1); }
+  25% { transform: scale(1); }
+  30% { transform: scale(1.4); }
+  50% { transform: scale(1.2); }
+  70% { transform: scale(1.4); }
+  100% { transform: scale(1); }
 }
