--- a/src/components/sections/_Invitation.scss
+++ b/src/components/sections/_Invitation.scss
@@ -16,35 +16,37 @@
         align-items: center;
 
         &-main {
-            font-size: 30px;
-            letter-spacing: 2px;
+            font-size: 36px;
+            font-weight: bold;
+            color: #FF7979;
+            letter-spacing: 5px;
             line-height: 1.2;
         }
 
         &-sub {
-            font-size: 20px;
-            margin-top: 15px;
+            font-size: 30px;
         }
     }
 
     &__intro {
+        font-size: 24px;
         text-align: center;
         margin-top: 50px;
     }
 
     &__message-img {
-        margin-top: 40px;
+        margin-top: 60px;
 
         img {
             width: 537px;
-            border-radius: 20px;
+            border-radius: 10px;
         }
     }
 
     &__message {
-        margin-top: 50px;
+        margin-top: 60px;
         text-align: center;
         line-height: 1.5;
-        font-size: 20px;
+        font-size: 24px;
     }
 }
