--- a/src/components/sections/_Navigation.scss
+++ b/src/components/sections/_Navigation.scss
@@ -8,6 +8,8 @@
     justify-content: center;
     padding-bottom: 50px;
     border-bottom: 1px dashed;
+    padding: 0 20px;
+    background: #fff;
   }
 
   &__title {
@@ -16,17 +18,18 @@
     gap: 12px;
 
     &-main {
-        font-size: 30px;
+        font-size: 24px;
         font-weight: bold;
     }
 
     &-sub {
-        font-weight: 20px;
+        font-weight: 16px;
     }
 }
   
   &__container {
     margin: 50px auto 0;
+    padding-bottom: 50px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -38,10 +41,12 @@
         align-items: center;
         justify-content: center;
         gap: 5px;
-        border: 1px solid;
-        padding: 10px;
+        padding: 5px;
         border-radius: 5px;
         color: black;
+        background: #fafbfc;
+        border: 1px solid rgba(27, 31, 35, 0.15);
+        font-size: 14px;
     }
   }
 }
