--- a/src/components/sections/_WayToCome.scss
+++ b/src/components/sections/_WayToCome.scss
@@ -5,5 +5,7 @@
         align-items: flex-start;
         justify-content: center;
         gap: 30px;
+        padding: 0 20px;
+        background: #fff;
     }
 }
