--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -2,12 +2,20 @@
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  // font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  //   'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  //   sans-serif;
+  // font-family: 'NanumDdarEGeEomMaGa';
+  // font-family: nanum gothic, sans-serif;
+  font-family: 'MaruBuriExtraLight';
+  font-family: 'MaruBuriLight';
+  font-family: 'MaruBuri';
+  font-family: 'MaruBuriBold';
+  font-family: 'MaruBuriSemiBold';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   height: 8000px;
+  background-color: $bodyColor;
 }
 
 code {
@@ -15,13 +23,13 @@ code {
     monospace;
 }
 
-.pages {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgb(145, 137, 123);
-  opacity: 0.1;
-  transition: 1s all ease-in-out;
-}
+// .pages {
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   right: 0;
+//   bottom: 0;
+//   background-color: rgb(145, 137, 123);
+//   opacity: 0.1;
+//   transition: 1s all ease-in-out;
+// }
