--- a/src/components/common/_Accordion.scss
+++ b/src/components/common/_Accordion.scss
@@ -3,15 +3,20 @@
   flex-direction: column;
   margin-top: 20px;
   position: relative;
+  width: 100%;
 
   &__title {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 10px;
+    background: #e1dbdb;
+    border-radius: 5px;
   }
 
   &__icon {
     transition: all 0.2s ease-in;
+    cursor: pointer;
   }
 
   &__icon.open {
@@ -20,10 +25,11 @@
 
   &__menu {
     display: none;
-    transition: all 0.3s ease-in;
+    transition: max-height 2s ease-in;
   }
 
   &__menu.open {
     display: block;
+    box-shadow: 1px 1px 2px rgb(0 0 0/5%);
   }
 }
