--- a/src/components/sections/_GuestBook.scss
+++ b/src/components/sections/_GuestBook.scss
@@ -6,32 +6,84 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        background: #fff;
     }
 
     &__title {
         text-align: center;
 
         &-main {
-            font-size: 40px;
+            font-size: 36px;
+            color: pink;
             font-weight: bold;
         }
 
         &-sub {
-            margin-top: 12px;
+            margin-top: 5px;
             font-size: 24px;
         }
     }
 
-    &__box {
+    &-box {
         margin-top: 50px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 20px;
     }
 
     &__input-box {
         margin-top: 50px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border: 1px solid rgba(27, 31, 35, 0.15);
+        padding: 10px;
+        border-radius: 10px;
     }
 
     &__icon {
-        width: 32px;
-        height: 32px;
+        width: 25px;
+        height: 25px;
+        cursor: pointer;
+    }
+
+    &-comment {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        background: #fafbfc;
+        padding: 10px;
+        border-radius: 10px;
+        border: 1px solid rgba(27, 31, 35, 0.15);
+
+        &-title {
+            display: flex;
+            gap: 10px;
+            align-items: center;
+
+            &-name {
+                font-size: 20px;
+            }
+
+            &-date {
+                font-size: 14px;
+                color: gray;
+            }
+        }
+
+        &-content {
+            padding: 20px;
+            font-size: 16px;
+        }
+    }
+
+    &-comment-box {
+        width: 500px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
     }
 }
+
