--- a/src/components/_Footer.scss
+++ b/src/components/_Footer.scss
@@ -1,39 +1,55 @@
 .footer {
-    &__inner {
-        margin-top: 100px;
-        margin-bottom: 50px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
+  &__inner {
+    margin-top: 100px;
+    margin-bottom: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 30px;
+  }
+
+  &__message {
+    position: absolute;
+    top: 80px;
+    right: 100px;
+    line-height: 1.2;
+    color: #3d3d30;
+  }
+
+  &__share-btn {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    cursor: pointer;
+  }
+
+  &__container {
+    position: relative;
+    width: 100%;
+    height: 500px;
+    background-image: url('./../../public/assets/images/wedding_01.jpeg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    &::before {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 50px;
+      background: linear-gradient(to top, rgba(255, 255, 255, 0), #fff);
+      z-index: 2;
     }
 
-    &__container {
-        position: relative;
-        width: 100%;
-        height: 500px;
-        background-image: url('./../../public/assets/images/wedding_01.jpeg');
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
-
-        &::before {
-            content: "";
-            position: absolute;
-            width: 100%;
-            height: 50px;
-            background: linear-gradient(to top, rgba(255, 255, 255, 0), #fff);
-            z-index: 2;
-        }
-
-        &::after {
-            content: "";
-            position: absolute;
-            bottom: 0;
-            width: 100%;
-            height: 50px;
-            background: linear-gradient(to bottom, rgba(255, 255, 255, 0), #fff);
-            z-index: 2;
-        }
+    &::after {
+      content: '';
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      height: 50px;
+      background: linear-gradient(to bottom, rgba(255, 255, 255, 0), #fff);
+      z-index: 2;
     }
+  }
 }
