--- a/src/components/common/_Accordion.scss
+++ b/src/components/common/_Accordion.scss
@@ -5,6 +5,10 @@
   position: relative;
   width: 100%;
 
+  max-height: 40px;
+  overflow: hidden;
+  transition: max-height 0.5s ease;
+
   &__title {
     display: flex;
     align-items: center;
@@ -24,12 +28,17 @@
   }
 
   &__menu {
-    display: none;
+    // display: none;
     transition: max-height 2s ease-in;
   }
 
   &__menu.open {
-    display: block;
+    // display: block;
     box-shadow: 1px 1px 2px rgb(0 0 0/5%);
   }
+}
+
+.accordion.open {
+  max-height: 400px;
+  overflow: unset;
 }
