--- a/src/components/sections/_Account.scss
+++ b/src/components/sections/_Account.scss
@@ -6,20 +6,22 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background-color: #fff;
   }
 
   &__title {
     text-align: center;
 
     &-main {
-      font-size: 40px;
+      font-size: 36px;
+      color: pink;
       font-weight: bold;
       letter-spacing: 2px;
     }
 
     &-sub {
       font-size: 20px;
-      margin-top: 8px;
+      margin-top: 5px;
     }
   }
 
@@ -29,7 +31,8 @@
 
   &__message {
     text-align: center;
-    line-height: 1.3;
+    line-height: 1.5;
+    font-size: 24px;
   }
 
   &__accordion {
