feat: Maple 컴포넌트

--- a/src/index.scss
+++ b/src/index.scss
@@ -19,6 +19,7 @@
 @import './components/common/Accordion';
 @import './components/Footer';
 @import './components/Timer';
+@import './components/common/Maple';
 
 // sections
 @import './components/sections/Hero';
