feat: DeleteModal 컴포넌트

--- a/src/index.scss
+++ b/src/index.scss
@@ -20,6 +20,7 @@
 @import './components/Footer';
 @import './components/Timer';
 @import './components/common/Maple';
+@import './components/DeleteModal';
 
 // sections
 @import './components/sections/Hero';
