--- a/src/_App.scss
+++ b/src/_App.scss
@@ -1,9 +1,10 @@
 .App {
   position: relative;
+  width: 100%;
+  overflow-x: hidden;
   max-width: 800px;
   box-sizing: border-box;
   margin: 0 auto;
-  height: 100%;
   padding: 0 20px;
   box-sizing: content-box;
   background-color: #fff;
