--- a/src/components/common/_Maple.scss
+++ b/src/components/common/_Maple.scss
@@ -1,15 +1,28 @@
 .maple-container {
-  position: relative;
-  z-index: 10;
+  position: fixed;
+  max-width: 800px;
+  margin: 0 auto;
+  overflow-x: hidden;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 20;
+  height: 100%;
+  pointer-events: none;
 }
 
 .maple {
   position: absolute;
-  top: -50px;
+  top: -30px;
   width: 25px;
   height: 25px;
-  // background-color: orange;
-  animation: fall linear 20s;
+  animation: fall linear 14s;
+
+  background-image: url('./../../../public/assets/mapleLeaf.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 @keyframes fall {
