--- a/src/components/_Wave.scss
+++ b/src/components/_Wave.scss
@@ -1,11 +1,14 @@
 .wave__bottom {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 30px;
+  min-height: 80px;
+  max-height: 100px;
+
   .waves {
-    position: absolute;
-    bottom: 0;
     width: 100%;
-    height: 30px;
-    min-height: 80px;
-    max-height: 100px;
+    height: 100%;
   }
 
   /* Animation */
@@ -31,15 +34,18 @@
 }
 
 .wave__top {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 30px;
+  min-height: 80px;
+  max-height: 100px;
+  z-index: 10;
+  transform: rotate(180deg);
+
   .waves {
-    position: absolute;
-    top: 0;
     width: 100%;
-    height: 30px;
-    min-height: 80px;
-    max-height: 100px;
-    z-index: 10;
-    transform: rotate(180deg);
+    height: 100%;
   }
 
   /* Animation */
@@ -74,9 +80,9 @@
 }
 
 /*Shrinking for mobile*/
-@media (max-width: 768px) {
-  .waves {
-    height: 40px;
-    min-height: 40px;
-  }
-}
+// @media (max-width: 768px) {
+//   .waves {
+//     height: 40px;
+//     min-height: 40px;
+//   }
+// }
