--- a/src/components/sections/_Calendar.scss
+++ b/src/components/sections/_Calendar.scss
@@ -17,11 +17,19 @@
 	&__day {
 		font-size: 30px;
 		line-height: 1.5;
+
+		@include mobile {
+			font-size: 28px;
+		}
 	}
 
-	&__tiem {
+	&__item {
 		font-size: 20px;
 		margin-top: 5px;
+
+		@include mobile {
+			font-size: 18px;
+		}
 	}
 
 	&__container {
