--- a/src/components/sections/_Hero.scss
+++ b/src/components/sections/_Hero.scss
@@ -4,10 +4,21 @@
     height: 800px;
     overflow: hidden;
     position: relative;
+
+    @include mobile {
+      height: 700px;
+    }
   }
 
   img {
     max-width: 800px;
     filter: grayscale(100%);
+
+    @include mobile {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      max-width: 600px;
+    }
   }
 }
