--- a/src/components/sections/_ImageGallery.scss
+++ b/src/components/sections/_ImageGallery.scss
@@ -3,6 +3,10 @@
         margin-top: 100px;
         position: relative;
         background: #fff;
+
+        @include mobile {
+            margin-top: 150px;
+        }
     }
 
     &__title {
@@ -18,20 +22,34 @@
             color: #FF7979;
             font-weight: bold;
             letter-spacing: 2px;
+
+            @include mobile {
+                font-size: 28px;
+            }
         }
 
         &-sub {
             font-size: 30px;
+
+            @include mobile {
+                font-size: 20px;
+            }
         }
     }
 
     &__album {
-        height: 2000px;
+        max-height: 2000px;
         // height: max-content;
         display: grid;
         grid-template-columns: repeat(2, 1fr);
+        grid-auto-rows: calc(((800px - 40px) / 2 - 10px / 2) / 16* 10); 
         gap: 10px;
         padding: 20px 20px;
+
+        @include mobile {
+            grid-auto-rows: calc(((500px - 40px) / 2 - 5px / 2) / 16* 10); 
+            gap: 5px;
+        }
 
         :nth-child(even) {
             grid-area: span 2;
@@ -42,6 +60,10 @@
         max-height: 900px;
         overflow: hidden;
         transition: max-height 0.5s ease-in-out;
+
+        @include mobile {
+            max-height: 500px;
+        }
     }
 
     &__container.show {
@@ -63,6 +85,7 @@
             height: 100%;
             object-fit: cover;
             object-position: center;
+            vertical-align: middle;
         }
     }
 
@@ -82,11 +105,20 @@
         align-items: center;
         justify-content: center;
         gap: 5px;
+
+        @include mobile {
+            font-size: 14px;
+        }
     }
 
     &__btn-icon {
         width: 25px;
         height: 25px;
+
+        @include mobile {
+            width: 20px;
+            height: 20px;
+        }
     }
 
     &__btn-icon.open {
