--- a/src/components/sections/_Info.scss
+++ b/src/components/sections/_Info.scss
@@ -23,6 +23,10 @@
     span {
       font-size: 30px;
       letter-spacing: 2px;
+
+      @include mobile {
+        font-size: 22px;
+      }
     }
   }
 
@@ -31,6 +35,11 @@
     width: 50px;
     height: 50px;
     animation: heartbeat 1.4s linear infinite;
+
+    @include mobile {
+      width: 35px;
+      height: 35px;
+    }
   }
 
 
@@ -40,6 +49,10 @@
 
     span {
       font-size: 32px;
+
+      @include mobile {
+        font-size: 20px;
+      }
     }
   }
 
@@ -50,6 +63,10 @@
 
     span {
       font-size: 28px;
+
+      @include mobile {
+        font-size: 16px;
+      }
     }
   }
 }
