--- a/src/components/sections/_Invitation.scss
+++ b/src/components/sections/_Invitation.scss
@@ -21,10 +21,18 @@
             color: #FF7979;
             letter-spacing: 5px;
             line-height: 1.2;
+
+            @include mobile {
+                font-size: 28px;
+            }
         }
 
         &-sub {
             font-size: 30px;
+
+            @include mobile {
+                font-size: 20px;
+            }
         }
     }
 
@@ -32,14 +40,24 @@
         font-size: 24px;
         text-align: center;
         margin-top: 50px;
+
+        @include mobile {
+            font-size: 16px;
+        }
     }
 
     &__message-img {
         margin-top: 60px;
+        max-width: 540px;
+
+        @include mobile {
+            padding: 0 20px;
+        }
 
         img {
-            width: 537px;
+            width: 100%;
             border-radius: 10px;
+            object-fit: cover;
         }
     }
 
@@ -48,5 +66,9 @@
         text-align: center;
         line-height: 1.5;
         font-size: 24px;
+
+        @include mobile {
+            font-size: 16px;
+        }
     }
 }
