feat: SCSS 스타일링(4)

--- a/src/components/_CommentForm.scss
+++ b/src/components/_CommentForm.scss
@@ -1,51 +1,72 @@
 .comment__form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  gap: 20px;
+
+  &-info {
     justify-content: center;
-    width: 500px;
+    width: 100%;
+    display: flex;
     gap: 20px;
+    align-items: center;
+  }
 
-    &-info {
-        justify-content: center;
-        width: 100%;
-        display: flex;
-        gap: 20px;
-        align-items: center;
+  &-name,
+  &-password {
+    display: flex;
+    gap: 5px;
+    align-items: center;
+
+    label {
+      font-size: 14px;
     }
 
-    &-name,
-    &-password {
-        display: flex;
-        gap: 5px;
-        align-items: center;
+    input {
+      height: 30px;
+      width: 150px;
+      font-size: 12px;
+      border-radius: 5px;
+      border: 1px solid rgba(27, 31, 35, 0.15);
 
-        label {
-            font-size: 14px;
-        }
-
-        input {
-            height: 30px;
-            width: 150px;
-            font-size: 12px;
-            border-radius: 5px;
-            border: 1px solid rgba(27, 31, 35, 0.15);
-        }
-    }
-
-    &-area {
-        width: 400px;
-        height: 50px;
-        border: none;
-        resize: none;
-    }
-
-    &-submit-btn {
+      @include mobile {
         width: 100px;
-        height: 30px;
-        border: 1px solid rgba(27, 31, 35, 0.15);
-        border-radius: 20px;
-        outline: none;
-        cursor: pointer;
+        font-size: 10px;
+      }
     }
+
+    label {
+      @include mobile {
+        font-size: 12px;
+      }
+    }
+  }
+
+  &-area {
+    width: 400px;
+    height: 50px;
+    border: none;
+    resize: none;
+
+    @include mobile {
+      width: 100%;
+    }
+  }
+
+  &-submit-btn {
+    width: 100px;
+    height: 30px;
+    border: 1px solid rgba(27, 31, 35, 0.15);
+    border-radius: 20px;
+    outline: none;
+    cursor: pointer;
+
+    @include mobile {
+      width: 80px;
+      height: 30px;
+      font-size: 12px;
+    }
+  }
 }
