--- a/src/components/_Timer.scss
+++ b/src/components/_Timer.scss
@@ -1,15 +1,26 @@
 .timer {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+
+  &__item {
     display: flex;
-    gap: 10px;
+    flex-direction: column;
+    align-items: center;
+    gap: 3px;
 
-    &__item {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 3px;
+    @include mobile {
+      font-size: 18px;
     }
+  }
 
-    &__day {
-        color: red;
+  &__day {
+    color: red;
+  }
+
+  &__message {
+    @include mobile {
+      font-size: 16px;
     }
+  }
 }
