--- a/src/components/_Vehicle.scss
+++ b/src/components/_Vehicle.scss
@@ -1,57 +1,78 @@
 .vehicle {
-    width: 100%;
-    padding-bottom: 30px;
+  width: 100%;
+  padding-bottom: 30px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  border-bottom: 1px dashed;
+
+  &__title {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 5px;
+    font-size: 20px;
+    font-weight: bold;
+
+    span {
+      font-size: 20px;
+
+      @include mobile {
+        font-size: 18px;
+      }
+    }
+  }
+
+  &__icon {
+    width: 32px;
+    height: 32px;
+
+    @include mobile {
+      width: 27px;
+      height: 27px;
+    }
+  }
+
+  &__icon.car {
+    width: 25px;
+    height: 25px;
+  }
+
+  &__item {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+
+    @include mobile {
+      font-size: 14px;
+    }
+
+    &::before {
+      content: '';
+      display: block;
+      width: 10px;
+      height: 10px;
+      background-color: black;
+      border-radius: 50%;
+
+      @include mobile {
+        background-color: rgb(145, 93, 101);
+      }
+    }
+  }
+
+  &__items {
     display: flex;
     flex-direction: column;
-    gap: 15px;
-    border-bottom: 1px dashed;
+    gap: 5px;
+    align-items: flex-start;
+    justify-content: center;
+    padding: 0 20px;
+    margin-bottom: 20px;
 
-    &__title {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        gap: 5px;
-        font-size: 20px;
-        font-weight: bold;
-
-        span {
-            font-size: 20px;
-        }
+    @include mobile {
+      gap: 10px;
     }
-
-    &__icon {
-        width: 32px;
-        height: 32px;
-    }
-
-    &__icon.car {
-        width: 25px;
-        height: 25px;
-    }
-
-    &__item {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        gap: 10px;
-
-        &::before {
-            content: "";
-            display: block;
-            width: 10px;
-            height: 10px;
-            background-color: black;
-            border-radius: 50%;
-        }
-    }
-
-    &__items {
-        display: flex;
-        flex-direction: column;
-        gap: 5px;
-        align-items: flex-start;
-        justify-content: center;
-        padding: 0 20px;
-        margin-bottom: 20px;
-    }
+  }
 }
