--- a/src/components/sections/_Calendar.scss
+++ b/src/components/sections/_Calendar.scss
@@ -1,79 +1,88 @@
 .calendar {
-	&__inner {
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		justify-content: center;
-		margin-top: 150px;
-	}
+  &__inner {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 150px;
+  }
 
-	&__date {
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-		align-items: center;
-	}
+  &__date {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 
-	&__day {
-		font-size: 30px;
-		line-height: 1.5;
+  &__day {
+    font-size: 30px;
+    line-height: 1.5;
 
-		@include mobile {
-			font-size: 28px;
-		}
-	}
+    @include mobile {
+      font-size: 28px;
+    }
+  }
 
-	&__item {
-		font-size: 20px;
-		margin-top: 5px;
+  &__item {
+    font-size: 20px;
+    margin-top: 5px;
 
-		@include mobile {
-			font-size: 18px;
-		}
-	}
+    @include mobile {
+      font-size: 18px;
+    }
+  }
 
-	&__container {
-		margin-top: 50px;
-	}
+  &__container {
+    margin-top: 50px;
 
-	&__D-day {
-		margin-top: 30px;
-		font-size: 24px;
-		display: flex;
-		gap: 5px;
-		flex-direction: column;
-		align-items: center;
-		justify-content: center;
-	}
+    @include mobile {
+      border-top: 1px dashed;
+      border-bottom: 1px dashed;
+    }
+  }
 
-	.rdp {
+  &__D-day {
+    margin-top: 30px;
+    font-size: 24px;
+    display: flex;
+    gap: 5px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 
-		&-caption {
-			display: none;
-		}
+    @include mobile {
+      margin-top: 50px;
+      gap: 10px;
+    }
+  }
 
-		&-day_selected {
-			background-color: orange;
-		}
+  .rdp {
+    &-caption {
+      display: none;
+    }
 
-		&-cell {
-			cursor: default;
-		}
+    &-day_selected {
+      background-color: orange;
+    }
 
-		&-head_cell {
-			font-size: 16px;
-			font-weight: bold;
-		}
+    &-cell {
+      cursor: default;
+    }
 
-		.rdp-table {
-			tr > :first-child {
-				color: red; /* 배경색을 예로 들었습니다 */
-			  }
-			  
-			  /* 마지막 자식 요소에 스타일 적용 */
-			  tr > :last-child {
-				color: red; /* 배경색을 예로 들었습니다 */
-			  }
-		}
-	}
+    &-head_cell {
+      font-size: 16px;
+      font-weight: bold;
+    }
+
+    .rdp-table {
+      tr > :first-child {
+        color: red; /* 배경색을 예로 들었습니다 */
+      }
+
+      /* 마지막 자식 요소에 스타일 적용 */
+      tr > :last-child {
+        color: red; /* 배경색을 예로 들었습니다 */
+      }
+    }
+  }
 }
