--- a/src/components/sections/_GuestBook.scss
+++ b/src/components/sections/_GuestBook.scss
@@ -1,89 +1,127 @@
 .guest__book {
-    &__inner {
-        margin-top: 100px;
-        margin-bottom: 50px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        background: #fff;
+  &__inner {
+    margin-top: 100px;
+    margin-bottom: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: #fff;
+
+    @include mobile {
+      margin-top: 150px;
+    }
+  }
+
+  &__title {
+    text-align: center;
+
+    &-main {
+      font-size: 36px;
+      color: pink;
+      font-weight: bold;
+
+      @include mobile {
+        font-size: 28px;
+      }
     }
 
-    &__title {
-        text-align: center;
+    &-sub {
+      margin-top: 5px;
+      font-size: 24px;
 
-        &-main {
-            font-size: 36px;
-            color: pink;
-            font-weight: bold;
+      @include mobile {
+        font-size: 20px;
+        margin-top: 8px;
+      }
+    }
+  }
+
+  &-box {
+    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+  }
+
+  &__input-box {
+    margin-top: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid rgba(27, 31, 35, 0.15);
+    padding: 10px;
+    border-radius: 10px;
+    max-width: 500px;
+
+    @include mobile {
+      width: 330px;
+    }
+  }
+
+  &__icon {
+    width: 25px;
+    height: 25px;
+    cursor: pointer;
+
+    @include mobile {
+      width: 20px;
+      height: 20px;
+    }
+  }
+
+  &-comment {
+    width: 500px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    background: #fafbfc;
+    padding: 10px;
+    border-radius: 10px;
+    border: 1px solid rgba(27, 31, 35, 0.15);
+
+    @include mobile {
+      width: 330px;
+    }
+
+    &-title {
+      display: flex;
+      gap: 10px;
+      align-items: center;
+
+      &-name {
+        font-size: 20px;
+
+        @include mobile {
+          font-size: 16px;
         }
+      }
 
-        &-sub {
-            margin-top: 5px;
-            font-size: 24px;
+      &-date {
+        font-size: 14px;
+        color: gray;
+
+        @include mobile {
+          font-size: 12px;
         }
+      }
     }
 
-    &-box {
-        margin-top: 50px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        gap: 20px;
+    &-content {
+      padding: 20px;
+      font-size: 16px;
+
+      @include mobile {
+        font-size: 14px;
+      }
     }
+  }
 
-    &__input-box {
-        margin-top: 50px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        border: 1px solid rgba(27, 31, 35, 0.15);
-        padding: 10px;
-        border-radius: 10px;
-    }
-
-    &__icon {
-        width: 25px;
-        height: 25px;
-        cursor: pointer;
-    }
-
-    &-comment {
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
-        background: #fafbfc;
-        padding: 10px;
-        border-radius: 10px;
-        border: 1px solid rgba(27, 31, 35, 0.15);
-
-        &-title {
-            display: flex;
-            gap: 10px;
-            align-items: center;
-
-            &-name {
-                font-size: 20px;
-            }
-
-            &-date {
-                font-size: 14px;
-                color: gray;
-            }
-        }
-
-        &-content {
-            padding: 20px;
-            font-size: 16px;
-        }
-    }
-
-    &-comment-box {
-        width: 500px;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-    }
+  &-comment-box {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
 }
-
