--- a/src/components/sections/_ImageGallery.scss
+++ b/src/components/sections/_ImageGallery.scss
@@ -1,140 +1,146 @@
 .gallery {
-    &__inner {
-        margin-top: 100px;
-        position: relative;
-        background: #fff;
+  &__inner {
+    margin-top: 100px;
+    position: relative;
+    background: #fff;
 
-        @include mobile {
-            margin-top: 150px;
-        }
+    @include mobile {
+      margin-top: 150px;
+    }
+  }
+
+  &__title {
+    text-align: center;
+    margin-bottom: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    &-main {
+      font-size: 36px;
+      color: #ff7979;
+      font-weight: bold;
+      letter-spacing: 2px;
+
+      @include mobile {
+        font-size: 28px;
+      }
     }
 
-    &__title {
-        text-align: center;
-        margin-bottom: 50px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
+    &-sub {
+      font-size: 30px;
 
-        &-main {
-            font-size: 36px;
-            color: #FF7979;
-            font-weight: bold;
-            letter-spacing: 2px;
+      @include mobile {
+        font-size: 20px;
+      }
+    }
+  }
 
-            @include mobile {
-                font-size: 28px;
-            }
-        }
+  &__album {
+    max-height: 2000px;
+    // height: max-content;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: calc(((800px - 40px) / 2 - 10px / 2) / 16 * 10);
+    gap: 10px;
+    padding: 20px 20px;
 
-        &-sub {
-            font-size: 30px;
-
-            @include mobile {
-                font-size: 20px;
-            }
-        }
+    @include mobile {
+      grid-auto-rows: calc(((500px - 40px) / 2 - 5px / 2) / 16 * 10);
+      gap: 5px;
     }
 
-    &__album {
-        max-height: 2000px;
-        // height: max-content;
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-auto-rows: calc(((800px - 40px) / 2 - 10px / 2) / 16* 10); 
-        gap: 10px;
-        padding: 20px 20px;
-
-        @include mobile {
-            grid-auto-rows: calc(((500px - 40px) / 2 - 5px / 2) / 16* 10); 
-            gap: 5px;
-        }
-
-        :nth-child(even) {
-            grid-area: span 2;
-        }
+    :nth-child(even) {
+      grid-area: span 2;
     }
+  }
 
-    &__container {
-        max-height: 900px;
-        overflow: hidden;
-        transition: max-height 0.5s ease-in-out;
+  &__container {
+    max-height: 900px;
+    overflow: hidden;
+    transition: max-height 0.5s ease-in-out;
 
-        @include mobile {
-            max-height: 500px;
-        }
+    @include mobile {
+      max-height: 500px;
     }
+  }
 
-    &__container.show {
-        overflow: unset;
-        max-height: 3000px;
+  &__container.show {
+    overflow: unset;
+    max-height: 3000px;
+  }
+
+  &__item {
+    border: none;
+    border-radius: 10px;
+    overflow: hidden;
+    position: relative;
+
+    img {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: center;
+      vertical-align: middle;
     }
+  }
 
+  &__more {
+    width: 100%;
+    position: absolute;
+  }
 
+  &__btn {
+    width: 100%;
+    height: 50px;
+    border: none;
+    outline: none;
+    position: relative;
+    background: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+    cursor: pointer;
 
-    &__item {
-        border: none;
-        border-radius: 10px;
-        overflow: hidden;
-        position: relative;
-
-        img {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            object-position: center;
-            vertical-align: middle;
-        }
+    @include mobile {
+      font-size: 14px;
     }
+  }
 
-    &__more {
-        width: 100%;
-        position: absolute;
+  &__btn-icon {
+    width: 25px;
+    height: 25px;
+
+    @include mobile {
+      width: 20px;
+      height: 20px;
     }
+  }
 
-    &__btn {
-        width: 100%;
-        height: 50px;
-        border: none;
-        outline: none;
-        position: relative;
-        background: #fff;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        gap: 5px;
+  &__btn-icon.open {
+    transform: rotate(180deg);
+  }
 
-        @include mobile {
-            font-size: 14px;
-        }
+  &__btn.show {
+    &::before {
+      content: '';
+      width: 100%;
+      height: 80px;
+      position: absolute;
+      right: 0;
+      left: 0;
+      bottom: 100%;
+      background: linear-gradient(
+        0deg,
+        rgba(250, 250, 250, 1) 0%,
+        rgba(250, 250, 250, 0.55) 60%,
+        rgba(250, 250, 250, 0.5) 73%,
+        rgba(250, 250, 250, 0.25) 83%,
+        rgba(250, 250, 250, 0) 100%
+      );
     }
-
-    &__btn-icon {
-        width: 25px;
-        height: 25px;
-
-        @include mobile {
-            width: 20px;
-            height: 20px;
-        }
-    }
-
-    &__btn-icon.open {
-        transform: rotate(180deg);
-    }
-
-    &__btn.show {
-        &::before {
-            content: "";
-            width: 100%;
-            height: 80px;
-            position: absolute;
-            right: 0;
-            left: 0;
-            bottom: 100%;
-            background: linear-gradient(0deg, rgba(250, 250, 250, 1) 0%, rgba(250, 250, 250, 0.55) 60%, rgba(250, 250, 250, 0.5) 73%, rgba(250, 250, 250, 0.25) 83%, rgba(250, 250, 250, 0) 100%);
-        }
-    }
+  }
 }
