feat: SCSS 스타일링(5)

--- a/src/components/common/_Accordion.scss
+++ b/src/components/common/_Accordion.scss
@@ -16,6 +16,12 @@
     padding: 10px;
     background: #e1dbdb;
     border-radius: 5px;
+
+    span {
+      @include mobile {
+        font-size: 14px;
+      }
+    }
   }
 
   &__icon {
