--- a/src/components/_Footer.scss
+++ b/src/components/_Footer.scss
@@ -15,6 +15,12 @@
     right: 100px;
     line-height: 1.2;
     color: #3d3d30;
+
+    @include mobile {
+      font-size: 14px;
+      left: 20px;
+      color: #251c1c;
+    }
   }
 
   &__share-btn {
@@ -22,6 +28,17 @@
     align-items: center;
     gap: 10px;
     cursor: pointer;
+
+    @include mobile {
+      font-size: 14px;
+    }
+  }
+
+  &__share-icon {
+    @include mobile {
+      width: 20px;
+      height: 20px;
+    }
   }
 
   &__container {
