--- a/src/components/sections/_Account.scss
+++ b/src/components/sections/_Account.scss
@@ -17,6 +17,10 @@
       color: pink;
       font-weight: bold;
       letter-spacing: 2px;
+
+      @include mobile {
+        font-size: 28px;
+      }
     }
 
     &-sub {
@@ -33,15 +37,23 @@
     text-align: center;
     line-height: 1.5;
     font-size: 24px;
+
+    @include mobile {
+      font-size: 15px;
+    }
   }
 
   &__accordion {
-    width: 400px;
+    max-width: 400px;
     margin-top: 50px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
+    @include mobile {
+      width: 330px;
+    }
   }
 }
 
@@ -59,6 +71,10 @@
     gap: 5px;
     align-items: flex-start;
     justify-content: center;
+
+    @include mobile {
+      font-size: 14px;
+    }
   }
 
   &__menu {
@@ -70,6 +86,16 @@
 
     li {
       cursor: pointer;
+
+      a, button {
+        @include mobile {
+          padding: 5px;
+        }
+      }
+    }
+
+    @include mobile {
+      font-size: 14px;
     }
   }
 }
