feat: Navigation 컴포넌틑 tmap 추가

--- a/src/components/sections/_GuestBook.scss
+++ b/src/components/sections/_GuestBook.scss
@@ -72,6 +72,14 @@
     }
   }
 
+  &-no-comment {
+    font-size: 26px;
+
+    @include mobile {
+      font-size: 16px;
+    }
+  }
+
   &-comment {
     width: 500px;
     display: flex;
