--- a/src/index.scss
+++ b/src/index.scss
@@ -9,6 +9,7 @@
 
 // components
 @import './App';
+@import './components/common/FullScreenMessage';
 @import './components/Bgm';
 @import './components/common/StateMessage';
 @import './components/Header';
