--- a/src/styles/_variable.scss
+++ b/src/styles/_variable.scss
@@ -1,6 +1,8 @@
-$bodyColor: #efefef;
-$AppColor: #fff;
-
+$backgroundBody: #f7b3b3;
+$backgroundWhite: #fafbfc;
+$weddingTitleColor: #ffcbd4;
+$weddingMainTextColor: #544f4f;
+$weddingSubTextColor: #a39f9f;
 
 $breakpoint-mobile: 300px;
 $breakpoint-tabletToMobile: 601px;
