--- a/src/_App.scss
+++ b/src/_App.scss
@@ -5,15 +5,13 @@
   max-width: 800px;
   box-sizing: border-box;
   margin: 0 auto;
-  padding: 0 20px;
   box-sizing: content-box;
-  background-color: #fff;
+  background-color: $backgroundWhite;
 
   @include mobile {
     margin: 0;
     max-width: 600px;
     padding: 0;
-    background-color: #fff;
   }
 }
 
