--- a/src/components/_DeleteModal.scss
+++ b/src/components/_DeleteModal.scss
@@ -7,15 +7,11 @@
   background-color: black;
   opacity: 0.85;
   z-index: 30;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  @extend .flex-center;
 
   &__container {
-    display: flex;
+    @extend .flex-center;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
     gap: 20px;
 
     &-desc {
