--- a/src/components/_Header.scss
+++ b/src/components/_Header.scss
@@ -1,11 +1,9 @@
 .header {
-  background: #fff;
+  background: transparent;
 
   &__inner {
-    display: flex;
+    @extend .flex-center;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
     gap: 20px;
     padding: 100px 20px 50px;
 
@@ -16,14 +14,13 @@
 
   &__date-box,
   &__name-box {
-    display: flex;
+    @extend .flex-center;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
     gap: 3px;
   }
 
   &__date {
+    color: $weddingMainTextColor;
     font-size: 50px;
 
     @include mobile {
@@ -32,6 +29,7 @@
   }
 
   &__day {
+    color: $weddingSubTextColor;
     font-size: 36px;
 
     @include mobile {
@@ -41,6 +39,7 @@
 
   &__groom-name,
   &__bride-name {
+    color: $weddingMainTextColor;
     font-size: 55px;
     letter-spacing: 10px;
 
@@ -50,7 +49,7 @@
   }
 
   &__name-title {
-    color: pink;
+    color: $weddingTitleColor;
     font-size: 20px;
     font-weight: bold;
     letter-spacing: 5px;
