--- a/src/components/_Timer.scss
+++ b/src/components/_Timer.scss
@@ -1,4 +1,5 @@
 .timer {
+  color: $weddingMainTextColor;
   display: flex;
   gap: 10px;
   align-items: center;
@@ -12,6 +13,10 @@
     @include mobile {
       font-size: 18px;
     }
+
+    span:first-child {
+      color: $weddingSubTextColor;
+    }
   }
 
   &__day {
@@ -19,6 +24,9 @@
   }
 
   &__message {
+    color: $weddingMainTextColor;
+    margin-top: 10px;
+
     @include mobile {
       font-size: 16px;
     }
