--- a/src/components/common/_Accordion.scss
+++ b/src/components/common/_Accordion.scss
@@ -18,6 +18,8 @@
     border-radius: 5px;
 
     span {
+      color: $weddingMainTextColor;
+
       @include mobile {
         font-size: 14px;
       }
@@ -34,13 +36,7 @@
   }
 
   &__menu {
-    // display: none;
     transition: max-height 2s ease-in;
-  }
-
-  &__menu.open {
-    // display: block;
-    box-shadow: 1px 1px 2px rgb(0 0 0/5%);
   }
 }
 
