--- a/src/components/sections/_Location.scss
+++ b/src/components/sections/_Location.scss
@@ -1,7 +1,6 @@
 .location {
   &__inner {
-    margin-top: 100px;
-    background-color: #fff;
+    margin-top: 150px;
 
     @include mobile {
       margin-top: 150px;
@@ -18,7 +17,7 @@
       font-size: 36px;
       font-weight: bold;
       letter-spacing: 2px;
-      color: pink;
+      color: $weddingTitleColor;
 
       @include mobile {
         font-size: 28px;
@@ -26,6 +25,7 @@
     }
 
     &-sub {
+      color: $weddingSubTextColor;
       margin-top: 3px;
       font-size: 30px;
 
@@ -36,11 +36,9 @@
   }
 
   &__address-box {
+    @extend .flex-center;
     margin-top: 50px;
-    display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
     gap: 5px;
 
     @include mobile {
@@ -49,6 +47,7 @@
   }
 
   &__name {
+    color: $weddingMainTextColor;
     font-size: 35px;
 
     @include mobile {
@@ -57,6 +56,7 @@
   }
 
   &__address {
+    color: $weddingSubTextColor;
     text-align: center;
     font-size: 24px;
 
@@ -66,10 +66,8 @@
   }
 
   &__container {
+    @extend .flex-center;
     margin-top: 50px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
   }
 
   &__map {
