--- a/src/components/swiper.css
+++ b/src/components/swiper.css
@@ -12,6 +12,12 @@
 
 .swiper-slide img {
     width: 100%;
-    object-fit: contain;
+    height: 80%;
+    object-fit: cover;
     aspect-ratio: 1/1;
+}
+
+.swiper-button-prev, 
+.swiper-button-next {
+    color: #fafbfc;
 }
